-
Bug
-
Resolution: Fixed
-
P2: Important
-
6.5.9, 6.9
-
None
-
de59c40a3 (dev), 28af09e5d (6.10), 819766279 (6.9), 983b7aa8f (tqtc/lts-6.8)
Compiling maroon and hangman examples on Windows or MacOS fails with similar reason:
C:/Users/qt/RTA/B2Qt_6.9.0/6.9.0/Boot2Qt/jetson-agx-orin-devkit/toolchain/sysroots/x86_64-w64-mingw32/usr/bin/aarch64-poky-linux/../../libexec/aarch64-poky-linux/gcc/aarch64-poky-linux/14.2.0/ld.exe: cannot open output file maroon: Permission denied
Similar proposal than descriped in QTBUG-133788 seems to solve problem on my local try-out so expecting that case-insensitive filesystem has to be taken in account.
- is duplicated by
-
QTBUG-134676 demos/maroon linking fails on Boot to Qt Windows
-
- Reported
-
- relates to
-
QTBUG-133788 Ndef editor example cross-compiling on Windows to Boot2Qt fails
-
- Closed
-
For Gerrit Dashboard: QTBUG-133792 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
642490,4 | Fix name clash in Hangman and Maroon demos | dev | qt/qtdoc | Status: MERGED | +2 | 0 |
652152,2 | Fix name clash in Hangman and Maroon demos | 6.10 | qt/qtdoc | Status: MERGED | +2 | 0 |
652782,2 | Fix name clash in Hangman and Maroon demos | 6.9 | qt/qtdoc | Status: MERGED | +2 | 0 |
652977,2 | Fix name clash in Hangman and Maroon demos | tqtc/lts-6.8 | qt/tqtc-qtdoc | Status: MERGED | +2 | 0 |