Fix name clash in Hangman and Maroon demos

In Unix-like OS name of executable clashes with QML module directory
name. It's better to avoid using QML module URI same as executable
name. Prepend "examples." to the QML URI in this case.

Pick-to: 6.8
Fixes: QTBUG-133792
Change-Id: Iaf87117f0d9212b609596ff8c697b909f9bd1809
Reviewed-by: Joerg Bornemann <joerg.bornemann@qt.io>
(cherry picked from commit de59c40a394e639688912d9a1e7f2f1964b928f8)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>
(cherry picked from commit 28af09e5d2ad3bb1be4530c6c22c89ffe649483e)